--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ footer {
 <div id='page'>
 <header>
 	<div id='logo'>
-		<img src='C:\work\img\logo.png'>
+		<img src='img\logo.png'>
 	</div>
 	<div id='top'>
 		로그인 | 회원가입 | 사이트 맵 | 회사소개
@@ -80,33 +80,33 @@ footer {
 </div><!--float 속성해재-->
 <nav>
 	<ul>
-		<li><img src='C:\work\img\menu01.png'></li>
-		<li><img src='C:\work\img\menu02.png'></li>
-		<li><img src='C:\work\img\menu03.png'></li>
-		<li><img src='C:\work\img\menu04.png'></li>
-		<li><img src='C:\work\img\menu05.png'></li>
-		<li><img src='C:\work\img\menu06.png'></li>
+		<li><img src='img\menu01.png'></li>
+		<li><img src='img\menu02.png'></li>
+		<li><img src='img\menu03.png'></li>
+		<li><img src='img\menu04.png'></li>
+		<li><img src='img\menu05.png'></li>
+		<li><img src='img\menu06.png'></li>
 	</ul>
 </nav>
 <div class='clear'>
 </div><!--float 속성해재-->
 <section>
-	<img src='C:\work\img\main_img.png'>
+	<img src='img\main_img.png'>
 </section>
 <aside>
 	<ul>
-		<li><img src='C:\work\img\banner01.png'></li>
-		<li><img src='C:\work\img\banner02.png'></li>
+		<li><img src='img\banner01.png'></li>
+		<li><img src='img\banner02.png'></li>
 	</ul>
 </aside>
 <div class='clear'>
 </div><!--float 속성해재-->
 <footer>
 	<div id='address'>
-		<img src='C:\work\img\address.png'>
+		<img src='img\address.png'>
 	</div>
 	<div id='customer'>
-		<img src='C:\work\img\customer.png'>
+		<img src='img\customer.png'>
 	</div>
 </footer>
 </div>
